--- a/menu.html
+++ b/menu.html
@@ -14,16 +14,16 @@
 
     <header class="mobile-header">
         <div class="header__content-container">
-            <div class="header__logo"><img src="img/logo.png" alt=""></div>
+            <a href="/."><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
             <label class="hamburger-menu">
                 <input type="checkbox" />
             </label>
             <nav class="hamburger-menu-block">
                 <ul class="hamburger-menu-list">
-                    <li><a href=""><p class="hamburger-menu-list-item">Home</p></a></li>
-                    <li><a href=""><p class="hamburger-menu-list-item">Menu</p></a></li>
-                    <li><a href=""><p class="hamburger-menu-list-item">Contact</p></a></li>
-                    <li><a href=""><p class="hamburger-menu-list-item">Open Hours</p></a></li>
+                    <li><a href="/."><p class="hamburger-menu-list-item">Home</p></a></li>
+                    <li><a href="menu"><p class="hamburger-menu-list-item">Menu</p></a></li>
+                    <li><a href="#contact-us"><p class="hamburger-menu-list-item">Contact</p></a></li>
+                    <li><a href="#opening-hours"><p class="hamburger-menu-list-item">Open Hours</p></a></li>
                 </ul> 
             </nav>
         </div>
@@ -31,17 +31,14 @@
 
     <header class="header-desktop">
         <div class="header-desktop__content-container">
-            <div class="header__logo"><img src="img/logo.png" alt=""></div>
+            <a href="/."><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
             <nav class="header-desktop__nav-flex-container">
-                <li><a href="#"><p class="heading-3-neutral">Home</p></a></li>
-                <li><a href="#"><p class="heading-3-neutral primary-header-link">Menu</p></a></li>
-                <li><a href="#"><p class="heading-3-neutral">Contact</p></a></li>
+                <li><a href="/."><p class="heading-3-neutral">Home</p></a></li>
+                <li><a href="menu"><p class="heading-3-neutral primary-header-link">Menu</p></a></li>
+                <li><a href="#contact-us"><p class="heading-3-neutral">Contact</p></a></li>
             </nav>
         </div>
     </header>
-
-    
-    
 
     <section class="hero-section">
         <div class="menu-hero-image"></div>
@@ -350,9 +347,9 @@
             <div class="footer__socials-container footer-element-gap">
                 <p class="heading-neutral footer__heading-gap">Socials</p>
                 <div class="footer__socials-flex-container">
-                    <img class="social-icon" src="img/facebook icon.png" alt="Facebook icon">
-                    <img class="social-icon" src="img/instagram icon.png" alt="Facebook icon">
-                    <img class="social-icon" src="img/twitter icon.png" alt="Facebook icon">
+                    <a href="#"><img class="social-icon" src="img/facebook icon.png" alt="Facebook icon"></a>
+                    <a href="#"><img class="social-icon" src="img/instagram icon.png" alt="Facebook icon"></a>
+                    <a href="#"><img class="social-icon" src="img/twitter icon.png" alt="Facebook icon"></a>
                 </div>
             </div>
             <div class="footer__contact-container footer-element-gap">
@@ -366,9 +363,9 @@
             <div class="footer__tandc-container">
                 <p class="heading-neutral footer__heading-gap">T's & C's</p>
                 <div class="footer__tandc-flex-container">
-                    <p class="copy-neutral">Terms & Conditions</p>
-                    <p class="copy-neutral">Privacy Policy</p>
-                    <p class="copy-neutral">Cookie Policy</p>
+                    <a href="#"><p class="copy-neutral">Terms & Conditions</p></a>
+                    <a href="#"><p class="copy-neutral">Privacy Policy</p></a>
+                    <a href="#"><p class="copy-neutral">Cookie Policy</p></a>
                 </div>
             </div>
         </div>
