--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </label>
             <nav class="hamburger-menu-block">
                 <ul class="hamburger-menu-list">
-                    <li><a href="/."><p class="hamburger-menu-list-item">Home</p></a></li>
+                    <li><a href="/"><p class="hamburger-menu-list-item">Home</p></a></li>
                     <li><a href="menu"><p class="hamburger-menu-list-item">Menu</p></a></li>
                     <li><a href="#contact-us"><p class="hamburger-menu-list-item">Contact</p></a></li>
                     <li><a href="#opening-hours"><p class="hamburger-menu-list-item">Open Hours</p></a></li>
@@ -33,7 +33,7 @@
         <div class="header-desktop__content-container">
             <div class="header__logo"><img src="img/logo.png" alt=""></div>
             <nav class="header-desktop__nav-flex-container">
-                <li><a href="/."><p class="heading-3-neutral">Home</p></a></li>
+                <li><a href="/"><p class="heading-3-neutral">Home</p></a></li>
                 <li><a href="menu"><p class="heading-3-neutral primary-header-link">Menu</p></a></li>
                 <li><a href="#contact-us"><p class="heading-3-neutral">Contact</p></a></li>
             </nav>
