--- a/menu.html
+++ b/menu.html
@@ -20,10 +20,10 @@
             </label>
             <nav class="hamburger-menu-block">
                 <ul class="hamburger-menu-list">
-                    <li><a href="/."><p class="hamburger-menu-list-item">Home</p></a></li>
+                    <li><a href="/"><p class="hamburger-menu-list-item">Home</p></a></li>
                     <li><a href="menu"><p class="hamburger-menu-list-item">Menu</p></a></li>
-                    <li><a href="#contact-us"><p class="hamburger-menu-list-item">Contact</p></a></li>
-                    <li><a href="#opening-hours"><p class="hamburger-menu-list-item">Open Hours</p></a></li>
+                    <li><a href="/#contact-us"><p class="hamburger-menu-list-item">Contact</p></a></li>
+                    <li><a href="/#opening-hours"><p class="hamburger-menu-list-item">Open Hours</p></a></li>
                 </ul> 
             </nav>
         </div>
