--- a/message-success.html
+++ b/message-success.html
@@ -16,7 +16,7 @@
         <img src="img/logo.png" alt="Company Logo" class="success-logo">
         <p class="heading-neutral text-align-center">Thank you for your message!</p>
         <p class="copy-neutral">We will be in touch very soon.</p>
-        <a href="#"><p class="button-secondary">Home</p></a>
+        <a href="./"><p class="button-secondary">Home</p></a>
     </section>
 
 </body>
