--- a/menu.html
+++ b/menu.html
@@ -14,13 +14,13 @@
 
     <header class="mobile-header">
         <div class="header__content-container">
-            <a href="/."><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
+            <a href="./"><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
             <label class="hamburger-menu">
                 <input type="checkbox" />
             </label>
             <nav class="hamburger-menu-block">
                 <ul class="hamburger-menu-list">
-                    <li><a href="/"><p class="hamburger-menu-list-item">Home</p></a></li>
+                    <li><a href="./"><p class="hamburger-menu-list-item">Home</p></a></li>
                     <li><a href="menu"><p class="hamburger-menu-list-item">Menu</p></a></li>
                     <li><a href="/#contact-us"><p class="hamburger-menu-list-item">Contact</p></a></li>
                     <li><a href="/#opening-hours"><p class="hamburger-menu-list-item">Open Hours</p></a></li>
@@ -31,11 +31,11 @@
 
     <header class="header-desktop">
         <div class="header-desktop__content-container">
-            <a href="/."><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
+            <a href="./"><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
             <nav class="header-desktop__nav-flex-container">
-                <li><a href="/."><p class="heading-3-neutral">Home</p></a></li>
+                <li><a href="/"><p class="heading-3-neutral">Home</p></a></li>
                 <li><a href="menu"><p class="heading-3-neutral primary-header-link">Menu</p></a></li>
-                <li><a href="#contact-us"><p class="heading-3-neutral">Contact</p></a></li>
+                <li><a href="./#contact-us"><p class="heading-3-neutral">Contact</p></a></li>
             </nav>
         </div>
     </header>
