--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-    <section class="forms section-gap #contact-us">
+    <section class="forms section-gap" id="contact-us">
         <div class="form__container">
             <p class="heading form__heading-gap">Message Us</p>
             <form action="https://api.web3forms.com/submit" method="POST" class="form__flex-container">
