--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
         <div class="header-desktop__content-container">
             <a href="./"><div class="header__logo"><img src="img/logo.png" alt=""></div></a>
             <nav class="header-desktop__nav-flex-container">
-                <li><a href="/"><p class="heading-3-neutral">Home</p></a></li>
+                <li><a href="./"><p class="heading-3-neutral">Home</p></a></li>
                 <li><a href="menu"><p class="heading-3-neutral primary-header-link">Menu</p></a></li>
                 <li><a href="./#contact-us"><p class="heading-3-neutral">Contact</p></a></li>
             </nav>
